--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Artists</h1>
-<% @artists.each do |artist| %>
-     <p><%= artist.name %></p>
+<h1>Songs</h1>
+<% @songs.each do |song| %>
+     <p><%= song.track %></p>
  <% end %>
