Working assocciated info

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Artists</h1>
 <% @artists.each do |artist| %>
      <p><%= artist.name %></p>
+     <% artist.songs.each do |song| %>
+     <p><%= song.track %></p>
+     <% end %>
  <% end %>
