--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Songs</h1>
+<h1>Choose your song!</h1>
+
 <% @songs.each do |song| %>
-     <p><%= song.track %></p>
- <% end %>
+   <p><%= link_to song.track, song %></p>
+<% end %>
+<%= link_to "Home", root_path %>
