--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Artist</h1>
+<h1>Add your Artist here :)</h1>
 
 <%= form_for(@artist) do |f| %>
   <div>
@@ -7,5 +7,5 @@
     <%= f.text_field :name %>
   </div>
     <%= f.submit "Save Artist" %>
-    <%= link_to "Back", root_path %> <!-- link_to -->
+    <%= link_to "Home", root_path %> <!-- link_to -->
 <% end %>
