--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -2,6 +2,7 @@
 
 <% @artists.each do |artist| %>
      <p><strong><%= link_to artist.name, artist %></strong></p>
+     <%= image_tag artist.artistimg %>
  <% end %>
  <%= link_to "New Artist", new_artist_path %>
  <%= link_to "Home", root_path %>
