--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -2,4 +2,5 @@
 <% @artist.songs.each do |song| %>
      <p><%= link_to song.track, artists_path %></p>
  <% end %>
+ <%= link_to "Delete", artist_path(@artist), method: :delete %>
  <%= link_to "Home", root_path %>
