--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,6 +1,8 @@
-<h1>Songs</h1>
+<h1>Songs of artist</h1>
 <% @artist.songs.each do |song| %>
-     <p><%= link_to song.track, artists_path %></p>
+     <p><%= link_to song.track, song %></p>
  <% end %>
- <%= link_to "Delete", artist_path(@artist), method: :delete %>
+
  <%= link_to "Home", root_path %>
+ <%= link_to "Edit", edit_artist_path(@artist) %>
+ <%= link_to "Delete", artist_path(@artist), method: :delete %>
