--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -3,4 +3,5 @@
 <% @songs.each do |song| %>
    <p><%= link_to song.track, song %></p>
 <% end %>
+<%= link_to "New Song", new_song_path %>
 <%= link_to "Home", root_path %>
