--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Song info</h1>
-
-<%= link_to "Home", root_path %>
-<%= link_to "Edit", edit_song_path(@song) %>
-<%= link_to "Delete", song_path(@song), method: :delete %>
+<p>--------------------------------------------------------</p>
+<p>
+  <%= link_to "Home", root_path %> | <%= link_to "Edit Song", edit_song_path(@song) %> |  <%= link_to "Delete Song", song_path(@song), method: :delete %>
+</p>
