--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,8 +1,9 @@
 <h1>Songs of artist</h1>
+<p>--------------------------------------------------------</p>
 <% @artist.songs.each do |song| %>
-     <p><%= link_to song.track, song %></p>
- <% end %>
-
- <%= link_to "Home", root_path %>
- <%= link_to "Edit", edit_artist_path(@artist) %>
- <%= link_to "Delete", artist_path(@artist), method: :delete %>
+  <p><%= link_to song.track, song %><p>
+<% end %>
+<p>--------------------------------------------------------</p>
+<p>
+  <%= link_to "Home", root_path %> | <%= link_to "Edit Artist", edit_artist_path(@artist) %> | <%= link_to "Delete Artist", artist_path(@artist), method: :delete %>
+</p>
