--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Choose your song!</h1>
-
+<p>--------------------------------------------------------</p>
 <% @songs.each do |song| %>
    <p><%= link_to song.track, song %></p>
 <% end %>
-<%= link_to "New Song", new_song_path %>
-<%= link_to "Home", root_path %>
+<p>--------------------------------------------------------</p>
+<p><%= link_to "New Song", new_song_path %> | <%= link_to "Home", root_path %></p>
