--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,14 +1,11 @@
 <h1>Add your Song here :)</h1>
-
+<p>--------------------------------------------------------</p>
 <%= form_for(@song) do |f| %>
-
-   <%= f.label :artist_id %>
-
-    <%= f.select :artist_id, options_for_select(@artists.collect{ |a| [a.name, a.id] }) %>
-
-    <%= f.label :song %>
-    <%= f.text_field :track %>
-    <%= f.submit "Save Song" %>
-    <%= link_to "Home", root_path %>
-
+  <p><%= f.label :artist_id %></P>
+  <%= f.select :artist_id, options_for_select(@artists.collect{ |a| [a.name, a.id] }) %>
+  <p><%= f.label :song %></p>
+  <%= f.text_field :track %>
+  <p><%= f.submit "Save Song" %></p>
 <% end %>
+<p>--------------------------------------------------------</p>
+<%= link_to "Home", root_path %>
