--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -1,13 +1,11 @@
 <h1>Edit Artist</h1>
-
+<p>--------------------------------------------------------</p>
 <%= form_for(@artist) do |f| %>
-  <div>
-    <p><%= f.label :name %></p>
-    <%= f.text_field :name %>
-  </div>
-
-  <div>
-    <%= f.submit "Save Artist" %>
-    <%= link_to "Cancel", @artist %>
-  </div>
+  <p><%= f.label :name %></p>
+  <%= f.text_field :name %>
+  <p><%= f.label :Add_a_super_nice_img! %></p>
+  <%= f.file_field :artistimg %>
+  <p><%= f.submit "Save Artist" %></p>
 <% end %>
+<p>--------------------------------------------------------</p>
+  <%= link_to "Cancel", @artist %>
